fix purging problems and missing color

--- a/src/css/_accordion.scss
+++ b/src/css/_accordion.scss
@@ -46,6 +46,7 @@ cagov-accordion:defined details {
   border-bottom: 1px solid #1f2574 !important;
   border-top: 1px solid #1f2574 !important;
   border-radius: 0!important;
+  background-color: #fff;
 }
 
 .accordion {
